# func-prog-3

./: README.md  dune-project  func_prog_3.opam
.github/workflows/: flow.yaml
lib/: dune
lib/console/: console.ml  dune  reader.ml
lib/interpolation/: common.ml  dune  lagrange.ml  lagrange.mli  linear.ml  linear.mli
test/: dune  test_interpolation.ml  test_property.ml
