(lang dune 3.17)

(name func_prog_3)

(generate_opam_files true)

(source
 (github fegor04/func-prog-3))

(authors "Egor Fedorov <fegor2004@gmail.com>")

(maintainers "Egor Fedorov <fegor2004@gmail.com>")

(license MIT)

(package
 (name func_prog_3)
 (synopsis "Interpolation in OCaml")
 (description "A laboratory work for Functional Programming course in ITMO University")
 (depends ocaml)
 (tags
  ("computational math" "interpolation")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
